fix cards align issue

--- a/src/components/Card/card.module.scss
+++ b/src/components/Card/card.module.scss
@@ -21,6 +21,7 @@
   &.small {
     width: 100%;
     min-width: 266px;
+    height: 290px;
   }
 
   &.medium {
