--- a/src/pages/styles/index.module.scss
+++ b/src/pages/styles/index.module.scss
@@ -106,6 +106,7 @@
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        align-items: flex-end;
         width: 100%;
 
         div + div {
